trunk/Archive2/19/7d5e7d0a791f4e/output
main.cpp: In function 'int main()':
main.cpp:7:5: error: 'cout' was not declared in this scope
     cout<<"YOOO";
     ^
main.cpp:7:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
